add api to upload canonical data for a variable

--- a/utils/create_region_data.ipynb
+++ b/utils/create_region_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,16 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 59394384\r\n",
+      "total 63931584\r\n",
       "-rw-r--r--  1 amandeep  staff    12G May 20 16:43 wikidata_edges_20200504.tsv.bz2\r\n",
-      "-rw-r--r--@ 1 amandeep  staff    16G May 18 11:45 wikidata_edges_20200504.tsv.gz\r\n"
+      "-rw-r--r--@ 1 amandeep  staff    16G May 18 11:45 wikidata_edges_20200504.tsv.gz\r\n",
+      "-rw-r--r--@ 1 amandeep  staff   2.2G Jun  4 11:32 wikidata_nodes_20200504_clean.tsv.gz\r\n"
      ]
     }
    ],
@@ -145,6 +146,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kgtk clean_data $COUNTRY_DIR/wikidata-countries-edges-truncated.tsv  $COUNTRY_DIR/wikidata-countries-edges-truncated-clean.tsv"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -153,23 +163,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "list index out of range\n",
-      "\n",
-      "real\t0m6.585s\n",
-      "user\t0m6.313s\n",
-      "sys\t0m0.149s\n"
+      "\r\n",
+      "real\t0m6.955s\r\n",
+      "user\t0m6.706s\r\n",
+      "sys\t0m0.137s\r\n"
      ]
     }
    ],
    "source": [
-    "!time cat $COUNTRY_DIR/wikidata-countries-edges-truncated.tsv | \\\n",
+    "!time cat $COUNTRY_DIR/wikidata-countries-edges-truncated-clean.tsv | \\\n",
     "kgtk explode > $COUNTRY_DIR/wikidata-countries-edges-exploded.tsv"
    ]
   },
@@ -359,13 +368,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "!kgtk cat $COUNTRY_DIR/wikidata-countries-labels-aliases-exploded.tsv \\\n",
     "$COUNTRY_DIR/wikidata-countries-edges-exploded.tsv >  $COUNTRY_DIR/countries-edges-exploded-unsorted.tsv"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -376,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
